--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <header class="header">
                 <div class="header__wrap">
                     <div class="header__leftside">
-                        <p><img class="header__icon-burger icon" src="./images/burger.png" alt=""></p>
-                        <p><img class="header__icon-cps" src="./images/CPS.png" alt=""></p>
+                        <p><img class="header__icon-burger icon" src="./images/burger.png" alt="burger"></p>
+                        <p><img class="header__icon-cps" src="./images/CPS.png" alt="CPS"></p>
                     </div>
                     <div class="header__rightside">
                         <p><img class="header__icon-phone icon" src="./images/phone.png" alt="phone"/></p>
@@ -28,11 +28,11 @@
                     <h1 class="services__title">Услуги и сервисы</h1>
                     <div class="services__info">
                         <div class="services__info-wrap">
-                            <p>Оставить заявку</p>
+                            <button>Оставить заявку</button>
                             <p><img class="services__icon services__icon-left icon" src="./images/request.svg" alt="request" /></p>
                         </div>
                         <div class="services__info-wrap">
-                            <p>Статус ремонта</p>
+                            <button>Статус ремонта</button>
                             <p><img class="services__icon services__icon-right icon" src="./images/search.png" alt="search" /></p>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                     <a href="#">Адреса сервисных центров</a>
                     <a href="#">Специальные цены</a>
                 </nav>
-                <a class="reviews" href="#">Отзывы</a>
+                <button class="reviews" href="#">Отзывы</button>
             </в>
             <main>
                 <div class="main__wrap">
