--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <button class="main__text-next">Читать далее</button>
                     </div>
                     <div class="main__img">
-                        <img src="./images/image-CPS.png" alt="" />
+                        <img src="./images/image-CPS.png" alt="CPS" />
                     </div>
                 </div>
             </main>
