--- a/index.html
+++ b/index.html
@@ -11,16 +11,26 @@
             <header class="header">
                 <div class="header__wrap">
                     <div class="header__leftside">
-                        <p><img class="header__icon-burger icon" src="./images/burger.png" alt="burger"></p>
-                        <p><img class="header__icon-cps" src="./images/CPS.png" alt="CPS"></p>
+                        <button class="btn"><img class="header__icon-burger icon" src="./images/burger.svg" alt="burger"></button>
+                        <a href="#"><img class="header__icon-cps" src="./images/CPS.svg" alt="CPS"></a>
                     </div>
-                    <div class="header__rightside">
-                        <p><img class="header__icon-phone icon" src="./images/phone.png" alt="phone"/></p>
-                        <p><img class="header__icon-message icon" src="./images/message.png" alt="message"/></p>
-                        <p><img class="header__icon-profile icon" src="./images/profile.png" alt="profile"/></p>
-                        <p><img class="header__icon-request icon" src="./images/request.svg" alt="request"/></p>
-                        <p><img class="header__icon-search icon" src="./images/search.png" alt="search" /></p>
-                    </div>
+                    <ul class="header__rightside">
+                        <li>
+                            <button class="btn"><img class="header__icon-phone icon" src="./images/phone.svg" alt="phone"/></button>
+                        </li>
+                        <li>
+                            <button class="btn"><img class="header__icon-message icon" src="./images/message.png" alt="message"/></button>
+                        </li>
+                        <li>
+                            <button class="btn"><img class="header__icon-profile icon" src="./images/profile.svg" alt="profile"/></button>
+                        </li>
+                        <li>
+                            <button class="btn"><img class="header__icon-request icon" src="./images/request.svg" alt="request"/></button>
+                        </li>
+                        <li>
+                            <button class="btn"><img class="header__icon-search icon" src="./images/search.svg" alt="search" /></button>
+                        </li>
+                    </ul>
                 </div>
             </header>   
             <div class="services">
@@ -28,44 +38,46 @@
                     <h1 class="services__title">Услуги и сервисы</h1>
                     <div class="services__info">
                         <div class="services__info-wrap">
-                            <button>Оставить заявку</button>
-                            <p><img class="services__icon services__icon-left icon" src="./images/request.svg" alt="request" /></p>
+                            <button class="btn">Оставить заявку</button>
+                            <button class="btn"><img class="services__icon services__icon-left icon" src="./images/request.svg" alt="request" /></button>
                         </div>
                         <div class="services__info-wrap">
-                            <button>Статус ремонта</button>
-                            <p><img class="services__icon services__icon-right icon" src="./images/search.png" alt="search" /></p>
+                            <button class="btn">Статус ремонта</button>
+                            <button class="btn"><img class="services__icon services__icon-right icon" src="./images/search.svg" alt="search" /></button>
                         </div>
                     </div>
                 </div>
                 <nav class="service-nav">
-                    <a class="active" href="#">Ремонтируемые бренды</a>
-                    <a href="#">Ремонтируемые устройства</a>
-                    <a href="#">Цены на услуги</a>
-                    <a href="#">Адреса сервисных центров</a>
-                    <a href="#">Специальные цены</a>
+                    <ul class="service-nav__wrap">
+                        <li><a class="active" href="#">Ремонтируемые бренды</a></li>
+                        <li><a href="#">Ремонтируемые устройства</a></li>
+                        <li><a href="#">Цены на услуги</a></li>
+                        <li><a href="#">Адреса сервисных центров</a></li>
+                        <li><a href="#">Специальные цены</a></li>
+                        <li><a href="#">Отзывы</a></li>
+                    </ul>
                 </nav>
-                <button class="reviews" href="#">Отзывы</button>
-            </в>
-            <main>
-                <div class="main__wrap">
-                    <div class="main__info">
-                        <div class="main__text">
-                            <p>
-                                Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной
-                                гарантией производителя.
-                            </p>
-                            <p>
-                                Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем,
-                                что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
-                            </p>
+                <main>
+                    <section class="main__wrap">
+                        <div class="main__info">
+                            <div class="main__text">
+                                <p>
+                                    Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной
+                                    гарантией производителя.
+                                </p>
+                                <p>
+                                    <span class="main__text-visible">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера</span> <span class="main__text-hidden">, что подтверждает большое количество постоянных клиентов. Мы гордимся тем,
+                                    что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</span>
+                                </p>
+                            </div>
+                            <button class="main__text-next btn">Читать далее</button>
                         </div>
-                        <button class="main__text-next">Читать далее</button>
-                    </div>
-                    <div class="main__img">
-                        <img src="./images/image-CPS.png" alt="CPS" />
-                    </div>
-                </div>
-            </main>
+                        <div class="main__img">
+                            <img src="./images/image-CPS.png" alt="CPS" />
+                        </div>
+                    </section>
+                </main>
+            </div>
         </div>
     </body>
 </html>
